changes in signin

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -27,7 +27,7 @@
             </div>
             <div  class="signIn navinnerdiv navicon">
                 <div class="navText">
-                    <div id="signU" onclick="goTOsignIn()"><i class="fa-solid fa-user"></i>Sign In / Sign Up</div>
+                    <div id="signU" onclick="goTOsignIn()"style="color:white;"><i class="fa-solid fa-user" ></i>Sign In / Sign Up</div>
                     <div id='ddl'>
                         <div id="in"></div>
                         <div id='ddl2'></div>
