--- a/signup/signup.html
+++ b/signup/signup.html
@@ -27,7 +27,7 @@
                 <input type="text" placeholder="Search essentials, groceries, and more ...">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <a href="../signin/signin/html " class="signinlink"><i class="fa-solid fa-user"></i> Sign in / sign up</a>
+            <a href="../signin/signin/html " class="signinlink"><i class="fa-solid fa-user" style="color:white;"></i> Sign in / sign up</a>
             <a href="../cart/cart.html " class="signinlink"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
         </div>
         <div class="menu-bar">
